--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -38,7 +38,7 @@ image::{uml_export_dir}/diagrams/PROC-task_planning.definition-context.svg[id=pr
 
 An instance of `PLAN_DATA_CONTEXT` represents the full set of tracked variables and expressions used in a Work Plan, which are either  atomic _variables_ or _constants_, or else _expressions_ that reference such variables, respectively represented by the classes `CONTEXT_VARIABLE<T>`, `CONTEXT_CONSTANT<T>` and `CONTEXT_EXPRESSION<T>`. These classes and the abstract parent are generic, with the parameter being the formal type of variable or expression.
 
-Context variables are typically related to subject state, such as patient vital signs, key demographic characteristics and so on, or the clinical care process, such as the 'time since stroke event', while expressions are used to represent logical expressions such as `$bp_systolic - $bp_diastolic`, where `$bp_systolic` and `$bp_diastolic` are defined as single variables. The syntax of expressions is defined by the {openehr_expression}[openEHR Expression language].
+Context variables are typically related to subject state, such as patient vital signs, key demographic characteristics and so on, or the clinical care process, such as the 'time since stroke event', while expressions are used to represent logical expressions such as `$bp_systolic - $bp_diastolic`, where `$bp_systolic` and `$bp_diastolic` are defined as single variables. The syntax of expressions is defined by the {openehr_el}[openEHR Expression language].
 
 Two types of context variable are distinguished: external and local, represented by `EXTERNAL_VARIABLE<t>` and `LOCAL_VARIABLE<T>`. The former represent values of entities outside the task planning environment, and are written to via a `_populating_request_` which uses some method (such as EHR querying, API calls) to obtain the relevant external value. They are accordingly not writable from within the Work Plan.
 
