--- a/docs/tp_vml/master01-preface.adoc
+++ b/docs/tp_vml/master01-preface.adoc
@@ -17,13 +17,19 @@ Prerequisite documents for reading this document include:
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_tp_vml}[{openehr_domain}/releases/PROC/latest/tp_vml.html].
+This specification is in the {spec_status} state. The development version of this document can be found at {openehr_tp_vml}[{openehr_tp_vml}].
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
 *TBD*: (example To Be Determined paragraph)
 
-Users are encouraged to comment on and/or advise on these paragraphs as well as the main content.  Feedback should be provided either on the {openehr_technical_list}[technical mailing list], or on the {openehr_jira_prs_proc}[specifications issue tracker].
+== Feedback
+
+Feedback may be provided on the {openehr_technical_list}[technical mailing list].
+
+Issues may be raised on the {openehr_jira_prs_proc}[specifications Problem Report tracker].
+
+To see changes made due to previously reported issues, see the {openehr_jira_crs_proc}[{component} component Change Request tracker].
 
 == Conformance
 
