--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -21,16 +21,19 @@
 :description: openEHR Task Planning Specification
 :spec_status: TRIAL
 
+include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
+
 //
 // ============================================ Asciidoc PREAMBLE =============================================
 //
 
+image::{openehr_logo}["openEHR logo",align="center"]
 image::/releases/BASE/latest/resources/images/openehr_logo_large.png["openEHR logo",align="center"]
 
 = Task Planning Model Specification
 
-include::{base_dir}/docs_common/boilerplate/full_front_block.adoc[]
-include::{base_dir}/docs_common/references/openehr_resources.adoc[]
+include::{ref_dir}/docs/boilerplate/full_front_block.adoc[]
+include::{ref_dir}/docs/references/reference_definitions.adoc[]
 
 //
 // ============================================= Asciidoc BODY ===============================================
@@ -114,4 +117,4 @@ include::master12-ehr_semantics.adoc[leveloffset=+1]
 //
 :sectnums!:
 == References
-include::{base_dir}/docs_common/references/workflow_publications.adoc[leveloffset=+1]
+include::{ref_dir}/docs/references/publications_workflow.adoc[leveloffset=+1]
