--- a/docs/tp_vml/master.adoc
+++ b/docs/tp_vml/master.adoc
@@ -22,16 +22,18 @@
 :spec_status: TRIAL
 :linkattrs:
 
+include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
+
 //
 // ============================================ Asciidoc PREAMBLE =============================================
 //
 
-image::/releases/BASE/latest/resources/images/openehr_logo_large.png["openEHR logo",align="center"]
+image::{openehr_logo}["openEHR logo",align="center"]
 
 = Task Planning Visual Modelling Language (TP-VML)
 
-include::{base_dir}/docs_common/boilerplate/full_front_block.adoc[]
-include::{base_dir}/docs_common/references/openehr_resources.adoc[]
+include::{ref_dir}/docs/boilerplate/full_front_block.adoc[]
+include::{ref_dir}/docs/references/reference_definitions.adoc[]
 
 //
 // ============================================= Asciidoc BODY ===============================================
@@ -93,4 +95,3 @@ include::master04-patterns.adoc[leveloffset=+1]
 :sectnums!:
 == References
 
-//include::{base_dir}/docs_common/references/workflow_publications.adoc[leveloffset=+1]
