--- a/docs/task_planning/master01-preface.adoc
+++ b/docs/task_planning/master01-preface.adoc
@@ -17,15 +17,15 @@ The intended audience includes:
 
 Prerequisite documents for reading this document include:
 
-* The {openehr_overview}[openEHR Architecture Overview].
+* The {openehr_overview}[openEHR Architecture Overview^].
 
 Related documents include:
 
-* The {openehr_rm_ehr}[openEHR EHR Information Model];
+* The {openehr_rm_ehr}[openEHR EHR Information Model^];
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_task_planning}[{openehr_task_planning}].
+This specification is in the {spec_status} state. The development version of this document can be found at {openehr_task_planning}[{openehr_task_planning}^].
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
@@ -33,11 +33,11 @@ Known omissions or questions are indicated in the text with a 'to be determined'
 
 == Feedback
 
-Feedback may be provided on the {openehr_technical_list}[technical mailing list].
+Feedback may be provided on the {openehr_technical_list}[technical mailing list^].
 
-Issues may be raised on the {openehr_jira_prs_proc}[specifications Problem Report tracker].
+Issues may be raised on the {component_prs}[specifications Problem Report tracker^].
 
-To see changes made due to previously reported issues, see the {openehr_jira_crs_proc}[{component} component Change Request tracker].
+To see changes made due to previously reported issues, see the {component_history}[{component} component Change Request tracker^].
 
 == Conformance
 
