--- a/docs/tp_vml/master01-preface.adoc
+++ b/docs/tp_vml/master01-preface.adoc
@@ -13,11 +13,11 @@ The intended audience includes:
 
 Prerequisite documents for reading this document include:
 
-* The {openehr_task_planning}[openEHR Task Planning Model];
+* The {openehr_task_planning}[openEHR Task Planning Model^];
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_tp_vml}[{openehr_tp_vml}].
+This specification is in the {spec_status} state. The development version of this document can be found at {openehr_tp_vml}[{openehr_tp_vml}^].
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
@@ -25,11 +25,11 @@ Known omissions or questions are indicated in the text with a 'to be determined'
 
 == Feedback
 
-Feedback may be provided on the {openehr_technical_list}[technical mailing list].
+Feedback may be provided on the {openehr_technical_list}[technical mailing list^].
 
-Issues may be raised on the {openehr_jira_prs_proc}[specifications Problem Report tracker].
+Issues may be raised on the {component_prs}[specifications Problem Report tracker^].
 
-To see changes made due to previously reported issues, see the {openehr_jira_crs_proc}[{component} component Change Request tracker].
+To see changes made due to previously reported issues, see the {component_history}[{component} component Change Request tracker^].
 
 == Conformance
 
