--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -6,214 +6,214 @@
 ==== Package task_planning
 
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_adhoc_branch_class[ADHOC_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_adhoc_branch_class[ADHOC_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_adhoc_group_class[ADHOC_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_adhoc_group_class[ADHOC_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL]
+* link:/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_blocking_branch_class[BLOCKING_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_blocking_branch_class[BLOCKING_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_blocking_group_class[BLOCKING_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_blocking_group_class[BLOCKING_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_boolean_context_expression_class[BOOLEAN_CONTEXT_EXPRESSION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_boolean_context_expression_class[BOOLEAN_CONTEXT_EXPRESSION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_calendar_entry_class[CALENDAR_ENTRY]
+* link:/releases/PROC/{proc_release}/task_planning.html#_calendar_entry_class[CALENDAR_ENTRY]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_calendar_event_class[CALENDAR_EVENT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_calendar_event_class[CALENDAR_EVENT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_calendar_time_class[CALENDAR_TIME]
+* link:/releases/PROC/{proc_release}/task_planning.html#_calendar_time_class[CALENDAR_TIME]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_callback_notification_class[CALLBACK_NOTIFICATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_callback_notification_class[CALLBACK_NOTIFICATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_callback_wait_class[CALLBACK_WAIT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_callback_wait_class[CALLBACK_WAIT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_choice_branch_class[CHOICE_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_choice_branch_class[CHOICE_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_choice_group_class[CHOICE_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_choice_group_class[CHOICE_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_clock_time_class[CLOCK_TIME]
+* link:/releases/PROC/{proc_release}/task_planning.html#_clock_time_class[CLOCK_TIME]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_condition_branch_class[CONDITION_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_condition_branch_class[CONDITION_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_condition_group_class[CONDITION_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_condition_group_class[CONDITION_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_context_constant_class[CONTEXT_CONSTANT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_context_constant_class[CONTEXT_CONSTANT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_context_expression_class[CONTEXT_EXPRESSION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_context_expression_class[CONTEXT_EXPRESSION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_context_value_class[CONTEXT_VALUE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_context_value_class[CONTEXT_VALUE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_context_variable_class[CONTEXT_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_context_variable_class[CONTEXT_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_continuous_event_variable_class[CONTINUOUS_EVENT_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_continuous_event_variable_class[CONTINUOUS_EVENT_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_customary_time_class[CUSTOMARY_TIME]
+* link:/releases/PROC/{proc_release}/task_planning.html#_customary_time_class[CUSTOMARY_TIME]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_dataset_spec_class[DATASET_SPEC]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dataset_spec_class[DATASET_SPEC]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_decision_branch_class[DECISION_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_decision_branch_class[DECISION_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_decision_group_class[DECISION_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_decision_group_class[DECISION_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_defined_action_class[DEFINED_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_defined_action_class[DEFINED_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_delay_event_class[DELAY_EVENT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_delay_event_class[DELAY_EVENT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_dispatchable_action_class[DISPATCHABLE_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dispatchable_action_class[DISPATCHABLE_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_dispatchable_task_class[DISPATCHABLE_TASK]
+* link:/releases/PROC/{proc_release}/task_planning.html#_dispatchable_task_class[DISPATCHABLE_TASK]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_action_class[EVENT_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_action_class[EVENT_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_branch_class[EVENT_BRANCH]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_branch_class[EVENT_BRANCH]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_group_class[EVENT_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_group_class[EVENT_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_record_class[EVENT_RECORD]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_record_class[EVENT_RECORD]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_variable_class[EVENT_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_variable_class[EVENT_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_wait_class[EVENT_WAIT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_event_wait_class[EVENT_WAIT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_execution_rule_class[EXECUTION_RULE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_execution_rule_class[EXECUTION_RULE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_execution_type_enumeration[EXECUTION_TYPE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_execution_type_enumeration[EXECUTION_TYPE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_external_request_class[EXTERNAL_REQUEST]
+* link:/releases/PROC/{proc_release}/task_planning.html#_external_request_class[EXTERNAL_REQUEST]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_external_variable_class[EXTERNAL_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_external_variable_class[EXTERNAL_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_hand_off_class[HAND_OFF]
+* link:/releases/PROC/{proc_release}/task_planning.html#_hand_off_class[HAND_OFF]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_definition_interface[I_TASK_PLAN_DEFINITION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_definition_interface[I_TASK_PLAN_DEFINITION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_materialised_interface[I_TASK_PLAN_MATERIALISED]
+* link:/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_materialised_interface[I_TASK_PLAN_MATERIALISED]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_definition_interface[I_WORK_PLAN_DEFINITION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_definition_interface[I_WORK_PLAN_DEFINITION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_materialised_interface[I_WORK_PLAN_MATERIALISED]
+* link:/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_materialised_interface[I_WORK_PLAN_MATERIALISED]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_linked_plan_class[LINKED_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_linked_plan_class[LINKED_PLAN]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_local_variable_class[LOCAL_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_local_variable_class[LOCAL_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_manual_notification_class[MANUAL_NOTIFICATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_manual_notification_class[MANUAL_NOTIFICATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_calendar_class[M_CALENDAR]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_calendar_class[M_CALENDAR]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_callback_class[M_CALLBACK]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_callback_class[M_CALLBACK]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_condition_group_class[M_CONDITION_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_condition_group_class[M_CONDITION_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_context_variable_class[M_CONTEXT_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_context_variable_class[M_CONTEXT_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_dispatchable_action_class[M_DISPATCHABLE_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_dispatchable_action_class[M_DISPATCHABLE_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_event_group_class[M_EVENT_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_event_group_class[M_EVENT_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_performable_action_class[M_PERFORMABLE_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_performable_action_class[M_PERFORMABLE_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_performer_allocation_class[M_PERFORMER_ALLOCATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_performer_allocation_class[M_PERFORMER_ALLOCATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_plan_data_context_class[M_PLAN_DATA_CONTEXT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_plan_data_context_class[M_PLAN_DATA_CONTEXT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_plan_item_class[M_PLAN_ITEM]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_plan_item_class[M_PLAN_ITEM]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_resource_allocation_class[M_RESOURCE_ALLOCATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_resource_allocation_class[M_RESOURCE_ALLOCATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_task_class[M_TASK]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_task_class[M_TASK]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_task_action_class[M_TASK_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_task_action_class[M_TASK_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_task_group_class[M_TASK_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_task_group_class[M_TASK_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_task_plan_class[M_TASK_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_task_plan_class[M_TASK_PLAN]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_timeline_class[M_TIMELINE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_timeline_class[M_TIMELINE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_work_plan_class[M_WORK_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_m_work_plan_class[M_WORK_PLAN]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_override_type_enumeration[OVERRIDE_TYPE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_override_type_enumeration[OVERRIDE_TYPE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_def_class[PARAMETER_DEF]
+* link:/releases/PROC/{proc_release}/task_planning.html#_parameter_def_class[PARAMETER_DEF]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_mapping_class[PARAMETER_MAPPING]
+* link:/releases/PROC/{proc_release}/task_planning.html#_parameter_mapping_class[PARAMETER_MAPPING]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_performable_action_class[PERFORMABLE_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_performable_action_class[PERFORMABLE_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_performable_task_class[PERFORMABLE_TASK]
+* link:/releases/PROC/{proc_release}/task_planning.html#_performable_task_class[PERFORMABLE_TASK]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_calendar_class[PLAN_CALENDAR]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_calendar_class[PLAN_CALENDAR]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_data_context_class[PLAN_DATA_CONTEXT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_data_context_class[PLAN_DATA_CONTEXT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_event_class[PLAN_EVENT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_event_class[PLAN_EVENT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_item_class[PLAN_ITEM]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_item_class[PLAN_ITEM]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_timeline_class[PLAN_TIMELINE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_timeline_class[PLAN_TIMELINE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_query_call_class[QUERY_CALL]
+* link:/releases/PROC/{proc_release}/task_planning.html#_query_call_class[QUERY_CALL]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_reminder_class[REMINDER]
+* link:/releases/PROC/{proc_release}/task_planning.html#_reminder_class[REMINDER]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resource_participation_class[RESOURCE_PARTICIPATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_resource_participation_class[RESOURCE_PARTICIPATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resume_action_class[RESUME_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_resume_action_class[RESUME_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resume_type_enumeration[RESUME_TYPE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_resume_type_enumeration[RESUME_TYPE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_state_trigger_class[STATE_TRIGGER]
+* link:/releases/PROC/{proc_release}/task_planning.html#_state_trigger_class[STATE_TRIGGER]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_state_variable_class[STATE_VARIABLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_state_variable_class[STATE_VARIABLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_subject_precondition_class[SUBJECT_PRECONDITION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_subject_precondition_class[SUBJECT_PRECONDITION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_sub_plan_class[SUB_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_sub_plan_class[SUB_PLAN]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_system_call_class[SYSTEM_CALL]
+* link:/releases/PROC/{proc_release}/task_planning.html#_system_call_class[SYSTEM_CALL]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_system_notification_class[SYSTEM_NOTIFICATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_system_notification_class[SYSTEM_NOTIFICATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_system_request_class[SYSTEM_REQUEST]
+* link:/releases/PROC/{proc_release}/task_planning.html#_system_request_class[SYSTEM_REQUEST]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_class[TASK]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_class[TASK]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_action_class[TASK_ACTION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_action_class[TASK_ACTION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_costing_class[TASK_COSTING]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_costing_class[TASK_COSTING]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_event_record_class[TASK_EVENT_RECORD]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_event_record_class[TASK_EVENT_RECORD]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_group_class[TASK_GROUP]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_group_class[TASK_GROUP]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_lifecycle_enumeration[TASK_LIFECYCLE]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_lifecycle_enumeration[TASK_LIFECYCLE]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_notification_record_class[TASK_NOTIFICATION_RECORD]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_notification_record_class[TASK_NOTIFICATION_RECORD]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_participation_class[TASK_PARTICIPATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_participation_class[TASK_PARTICIPATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_plan_class[TASK_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_plan_class[TASK_PLAN]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_plan_event_record_class[TASK_PLAN_EVENT_RECORD]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_plan_event_record_class[TASK_PLAN_EVENT_RECORD]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_plan_execution_history_class[TASK_PLAN_EXECUTION_HISTORY]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_plan_execution_history_class[TASK_PLAN_EXECUTION_HISTORY]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_repeat_class[TASK_REPEAT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_repeat_class[TASK_REPEAT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_transition_class[TASK_TRANSITION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_transition_class[TASK_TRANSITION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_task_wait_class[TASK_WAIT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_task_wait_class[TASK_WAIT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_temporal_relation_enumeration[TEMPORAL_RELATION]
+* link:/releases/PROC/{proc_release}/task_planning.html#_temporal_relation_enumeration[TEMPORAL_RELATION]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_timeline_moment_class[TIMELINE_MOMENT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_timeline_moment_class[TIMELINE_MOMENT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_timer_event_class[TIMER_EVENT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_timer_event_class[TIMER_EVENT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_timer_wait_class[TIMER_WAIT]
+* link:/releases/PROC/{proc_release}/task_planning.html#_timer_wait_class[TIMER_WAIT]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_time_specifier_class[TIME_SPECIFIER]
+* link:/releases/PROC/{proc_release}/task_planning.html#_time_specifier_class[TIME_SPECIFIER]
 [.xcode]
-* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_work_plan_class[WORK_PLAN]
+* link:/releases/PROC/{proc_release}/task_planning.html#_work_plan_class[WORK_PLAN]
