--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -8,7 +8,7 @@ The `history` package contains the model of audit events that have occurred to e
 
 [.text-center]
 .rm.task_planning package overview
-image::{uml_export_dir}/diagrams/PROC-task_planning-overview.svg[id=proc_task_planning_overview, align="center"]
+image::{uml_diagrams_uri}/PROC-task_planning-overview.svg[id=proc_task_planning_overview, align="center"]
 
 The following instance diagram illustrates the relationships among these models for one Task Plan. On the left is a Task Plan definition, consisting of a Task Group and various Defined Actions. Each of these Tasks may have a prototype Entry attached, which represents the intended data of an Action, Observation or other Entry that the Task defines.
 
@@ -18,7 +18,7 @@ At the lower right is a Task Plan Execution History, which is a record of all ev
 
 [.text-center]
 .Task planning overview
-image::diagrams/task_planning_overview.svg[id=task_planning_overview, align="center", width=65%]
+image::{diagrams_uri}/task_planning_overview.svg[id=task_planning_overview, align="center", width=65%]
 
 == Identification and Referencing
 
@@ -34,11 +34,11 @@ The following UML diagram illustrates.
 
 [.text-center]
 .Task planning - context values
-image::{uml_export_dir}/diagrams/PROC-task_planning.definition-context.svg[id=proc_task_planning_context, align="center"]
+image::{uml_diagrams_uri}/PROC-task_planning.definition-context.svg[id=proc_task_planning_context, align="center"]
 
 An instance of `PLAN_DATA_CONTEXT` represents the full set of tracked variables and expressions used in a Work Plan, which are either  atomic _variables_ or _constants_, or else _expressions_ that reference such variables, respectively represented by the classes `CONTEXT_VARIABLE<T>`, `CONTEXT_CONSTANT<T>` and `CONTEXT_EXPRESSION<T>`. These classes and the abstract parent are generic, with the parameter being the formal type of variable or expression.
 
-Context variables are typically related to subject state, such as patient vital signs, key demographic characteristics and so on, or the clinical care process, such as the 'time since stroke event', while expressions are used to represent logical expressions such as `$bp_systolic - $bp_diastolic`, where `$bp_systolic` and `$bp_diastolic` are defined as single variables. The syntax of expressions is defined by the {openehr_el}[openEHR Expression language].
+Context variables are typically related to subject state, such as patient vital signs, key demographic characteristics and so on, or the clinical care process, such as the 'time since stroke event', while expressions are used to represent logical expressions such as `$bp_systolic - $bp_diastolic`, where `$bp_systolic` and `$bp_diastolic` are defined as single variables. The syntax of expressions is defined by the {openehr_expression_language}[openEHR Expression language].
 
 Two types of context variable are distinguished: external and local, represented by `EXTERNAL_VARIABLE<t>` and `LOCAL_VARIABLE<T>`. The former represent values of entities outside the task planning environment, and are written to via a `_populating_request_` which uses some method (such as EHR querying, API calls) to obtain the relevant external value. They are accordingly not writable from within the Work Plan.
 
