--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -7,7 +7,7 @@
 4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
 
 |[[latest_issue]]0.5.0
-|{openehr_jira}/SPECPROC-2[SPECPROC-2] Initial Writing.
+|{spec_tickets}/SPECPROC-2[SPECPROC-2^] Initial Writing.
 |T Beale
 |[[latest_issue_date]]20 Oct 2017
 
