--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,25 +7,25 @@
 4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
 
 |[[latest_issue]]1.0.1
-|{openehr_jira}/SPECPROC-2[SPECPROC-2] Fix various typos; add missed `BOOLEAN_CONTEXT_EXPRESSION`;
+|{spec_tickets}/SPECPROC-2[SPECPROC-2^] Fix various typos; add missed `BOOLEAN_CONTEXT_EXPRESSION`;
  Remove duplicate attribute `WORK_PLAN._events_`.
 |M Kejžar
 |[[latest_issue_date]]24 Oct 2017
 
 |1.0.0
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Further documentation improvements;
+|{spec_tickets}/SPECPROC-1[SPECPROC-1^] Further documentation improvements;
  Added explanations for resume semantics; added `RESUME_ACTION` class.
 |T Beale
 |17 Oct 2017
 
 |0.9.0
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Restructure document;
+|{spec_tickets}/SPECPROC-1[SPECPROC-1^] Restructure document;
  Various refactoring of Event classes; global calendar, timeline.
 |T Beale
 |12 Oct 2017
 
 |0.8.2
-|{openehr_jira}/SPECPROC-1[SPECPROC-1] Workshop Sep 25-28 and follow-up calls; +
+|{spec_tickets}/SPECPROC-1[SPECPROC-1^] Workshop Sep 25-28 and follow-up calls; +
  Significant updates to model; +
  Include event-based design; +
  Moved spec to new PROC openEHR component.
@@ -76,7 +76,7 @@
 |31 May 2017
 
 |0.6.0
-|{openehr_jira}/SPECRM-58[SPECRM-58]. Initial writing.
+|{spec_tickets}/SPECRM-58[SPECRM-58^]. Initial writing.
 |T Beale, +
  B Naess, +
  I McNicoll
