--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -4,7 +4,7 @@
 |===
 |Issue|Details|Raiser|Completed
 
-4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
+4+^h|*PROC Release 1.0.0*
 
 |[[latest_issue]]0.5.0
 |{spec_tickets}/SPECPROC-2[SPECPROC-2^] Initial Writing.
